--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,14 @@ code {
 }
 
 
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
+
+.scrollbar-hidden {
+  -ms-overflow-style: none;  /* Internet Explorer and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
 
 
 @layer base {
